Server/AccountingServer.Shell/Parsing/ShellParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.4.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\b1f6c1c4\Documents\GitHub\ProfessionalAccounting\Server\AccountingServer.QueryGeneration\Shell.g4 by ANTLR 4.4.1-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace AccountingServer.Shell.Parsing {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.4.1-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class ShellParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, ChartArea=34, Series=35, Ignore=36, Launch=37, Connect=38, 
		Shutdown=39, Backup=40, Help=41, Titles=42, Exit=43, Check=44, EditNamedQueries=45, 
		AOAll=46, AOList=47, AOQuery=48, AORegister=49, AOUnregister=50, AORecalc=51, 
		AOResetSoft=52, AOResetHard=53, AOResetMixed=54, AOApply=55, AOCollapse=56, 
		AOCheck=57, SubtotalFields=58, Guid=59, RangeNull=60, RangeAllNotNull=61, 
		RangeAYear=62, RangeAMonth=63, RangeDeltaMonth=64, RangeADay=65, RangeDeltaDay=66, 
		RangeDeltaWeek=67, VoucherType=68, CaretQuotedString=69, PercentQuotedString=70, 
		DollarQuotedString=71, DoubleQuotedString=72, SingleQuotedString=73, DetailTitle=74, 
		DetailTitleSubTitle=75, Float=76, Percent=77, Intersect=78, Union=79, 
		Substract=80, WS=81;
	public const int
		RULE_commandEOF = 0, RULE_command = 1, RULE_autoCommand = 2, RULE_otherCommand = 3, 
		RULE_chart = 4, RULE_chartLevels = 5, RULE_chartLevel = 6, RULE_report = 7, 
		RULE_namedQuery = 8, RULE_namedQueries = 9, RULE_namedQ = 10, RULE_namedQueryTemplateR = 11, 
		RULE_name = 12, RULE_coef = 13, RULE_groupedQuery = 14, RULE_subtotal = 15, 
		RULE_subtotalAggr = 16, RULE_voucherDetailQuery = 17, RULE_emit = 18, 
		RULE_vouchers = 19, RULE_vouchersB = 20, RULE_voucherQuery = 21, RULE_details = 22, 
		RULE_detailQuery = 23, RULE_range = 24, RULE_rangeCore = 25, RULE_rangePoint = 26, 
		RULE_rangeCertainPoint = 27, RULE_rangeYear = 28, RULE_rangeMonth = 29, 
		RULE_rangeWeek = 30, RULE_rangeDay = 31, RULE_asset = 32, RULE_assetList = 33, 
		RULE_assetQuery = 34, RULE_assetRegister = 35, RULE_assetUnregister = 36, 
		RULE_assetRedep = 37, RULE_assetResetSoft = 38, RULE_assetResetMixed = 39, 
		RULE_assetResetHard = 40, RULE_assetApply = 41, RULE_assetCheck = 42, 
		RULE_amort = 43, RULE_amortList = 44, RULE_amortQuery = 45, RULE_amortRegister = 46, 
		RULE_amortUnregister = 47, RULE_amortReamo = 48, RULE_amortResetSoft = 49, 
		RULE_amortResetMixed = 50, RULE_amortApply = 51, RULE_amortCheck = 52, 
		RULE_distributedQ = 53, RULE_distributedQAtom = 54, RULE_carry = 55, RULE_carryMonthResetHard = 56, 
		RULE_carryMonth = 57, RULE_carryYearResetHard = 58, RULE_carryYear = 59;
	public static readonly string[] ruleNames = {
		"commandEOF", "command", "autoCommand", "otherCommand", "chart", "chartLevels", 
		"chartLevel", "report", "namedQuery", "namedQueries", "namedQ", "namedQueryTemplateR", 
		"name", "coef", "groupedQuery", "subtotal", "subtotalAggr", "voucherDetailQuery", 
		"emit", "vouchers", "vouchersB", "voucherQuery", "details", "detailQuery", 
		"range", "rangeCore", "rangePoint", "rangeCertainPoint", "rangeYear", 
		"rangeMonth", "rangeWeek", "rangeDay", "asset", "assetList", "assetQuery", 
		"assetRegister", "assetUnregister", "assetRedep", "assetResetSoft", "assetResetMixed", 
		"assetResetHard", "assetApply", "assetCheck", "amort", "amortList", "amortQuery", 
		"amortRegister", "amortUnregister", "amortReamo", "amortResetSoft", "amortResetMixed", 
		"amortApply", "amortCheck", "distributedQ", "distributedQAtom", "carry", 
		"carryMonthResetHard", "carryMonth", "carryYearResetHard", "carryYear"
	};

	private static readonly string[] _LiteralNames = {
		null, "'ch'", "';'", "':'", "'='", "'rp'", "'Rp'", "'/'", "'//'", "'::'", 
		"'|'", "'`'", "'``'", "'!'", "'D'", "'[]'", "'['", "']'", "'A'", "'{'", 
		"'}'", "'E'", "'('", "')'", "'>'", "'<'", "'~'", "'@'", "'a'", "'o'", 
		"'[['", "']]'", "'ca'", "'caa'", "'chartArea'", "'series'", "'ignore'", 
		null, null, null, "'backup'", null, null, "'exit'", null, "'nq'", "'-all'", 
		null, null, null, null, null, "'-reset-soft'", "'-reset-hard'", "'-reset-mixed'", 
		null, null, "'-chk'", null, null, "'null'", "'~null'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'*'", "'+'", "'-'", "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "ChartArea", 
		"Series", "Ignore", "Launch", "Connect", "Shutdown", "Backup", "Help", 
		"Titles", "Exit", "Check", "EditNamedQueries", "AOAll", "AOList", "AOQuery", 
		"AORegister", "AOUnregister", "AORecalc", "AOResetSoft", "AOResetHard", 
		"AOResetMixed", "AOApply", "AOCollapse", "AOCheck", "SubtotalFields", 
		"Guid", "RangeNull", "RangeAllNotNull", "RangeAYear", "RangeAMonth", "RangeDeltaMonth", 
		"RangeADay", "RangeDeltaDay", "RangeDeltaWeek", "VoucherType", "CaretQuotedString", 
		"PercentQuotedString", "DollarQuotedString", "DoubleQuotedString", "SingleQuotedString", 
		"DetailTitle", "DetailTitleSubTitle", "Float", "Percent", "Intersect", 
		"Union", "Substract", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Shell.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ShellParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CommandEOFContext : ParserRuleContext {
		public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ShellParser.Eof, 0); }
		public CommandEOFContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandEOF; } }
	}

	[RuleVersion(0)]
	public CommandEOFContext commandEOF() {
		CommandEOFContext _localctx = new CommandEOFContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_commandEOF);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; command();
			State = 121; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public AssetContext asset() {
			return GetRuleContext<AssetContext>(0);
		}
		public GroupedQueryContext groupedQuery() {
			return GetRuleContext<GroupedQueryContext>(0);
		}
		public ChartContext chart() {
			return GetRuleContext<ChartContext>(0);
		}
		public AmortContext amort() {
			return GetRuleContext<AmortContext>(0);
		}
		public AutoCommandContext autoCommand() {
			return GetRuleContext<AutoCommandContext>(0);
		}
		public OtherCommandContext otherCommand() {
			return GetRuleContext<OtherCommandContext>(0);
		}
		public CarryContext carry() {
			return GetRuleContext<CarryContext>(0);
		}
		public VouchersContext vouchers() {
			return GetRuleContext<VouchersContext>(0);
		}
		public ReportContext report() {
			return GetRuleContext<ReportContext>(0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 132;
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 123; autoCommand();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124; vouchers();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 125; groupedQuery();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 126; chart();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 127; report();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 128; asset();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 129; amort();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 130; carry();
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 131; otherCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AutoCommandContext : ParserRuleContext {
		public ITerminalNode DollarQuotedString() { return GetToken(ShellParser.DollarQuotedString, 0); }
		public ITerminalNode SingleQuotedString(int i) {
			return GetToken(ShellParser.SingleQuotedString, i);
		}
		public IReadOnlyList<ITerminalNode> SingleQuotedString() { return GetTokens(ShellParser.SingleQuotedString); }
		public AutoCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_autoCommand; } }
	}

	[RuleVersion(0)]
	public AutoCommandContext autoCommand() {
		AutoCommandContext _localctx = new AutoCommandContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_autoCommand);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134; Match(DollarQuotedString);
			State = 138;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==SingleQuotedString) {
				{
				{
				State = 135; Match(SingleQuotedString);
				}
				}
				State = 140;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherCommandContext : ParserRuleContext {
		public ITerminalNode DollarQuotedString() { return GetToken(ShellParser.DollarQuotedString, 0); }
		public ITerminalNode Connect() { return GetToken(ShellParser.Connect, 0); }
		public ITerminalNode Backup() { return GetToken(ShellParser.Backup, 0); }
		public ITerminalNode EditNamedQueries() { return GetToken(ShellParser.EditNamedQueries, 0); }
		public ITerminalNode Shutdown() { return GetToken(ShellParser.Shutdown, 0); }
		public ITerminalNode Help() { return GetToken(ShellParser.Help, 0); }
		public ITerminalNode Check() { return GetToken(ShellParser.Check, 0); }
		public ITerminalNode Launch() { return GetToken(ShellParser.Launch, 0); }
		public ITerminalNode Exit() { return GetToken(ShellParser.Exit, 0); }
		public ITerminalNode Titles() { return GetToken(ShellParser.Titles, 0); }
		public OtherCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otherCommand; } }
	}

	[RuleVersion(0)]
	public OtherCommandContext otherCommand() {
		OtherCommandContext _localctx = new OtherCommandContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_otherCommand);
		int _la;
		try {
			State = 153;
			switch (_input.La(1)) {
			case EditNamedQueries:
				EnterOuterAlt(_localctx, 1);
				{
				State = 141; Match(EditNamedQueries);
				}
				break;
			case Check:
				EnterOuterAlt(_localctx, 2);
				{
				State = 142; Match(Check);
				}
				break;
			case Titles:
				EnterOuterAlt(_localctx, 3);
				{
				State = 143; Match(Titles);
				}
				break;
			case Launch:
				EnterOuterAlt(_localctx, 4);
				{
				State = 144; Match(Launch);
				}
				break;
			case Connect:
				EnterOuterAlt(_localctx, 5);
				{
				State = 145; Match(Connect);
				}
				break;
			case Shutdown:
				EnterOuterAlt(_localctx, 6);
				{
				State = 146; Match(Shutdown);
				}
				break;
			case Backup:
				EnterOuterAlt(_localctx, 7);
				{
				State = 147; Match(Backup);
				}
				break;
			case Help:
				EnterOuterAlt(_localctx, 8);
				{
				State = 148; Match(Help);
				State = 150;
				_la = _input.La(1);
				if (_la==DollarQuotedString) {
					{
					State = 149; Match(DollarQuotedString);
					}
				}

				}
				break;
			case Exit:
				EnterOuterAlt(_localctx, 9);
				{
				State = 152; Match(Exit);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChartContext : ParserRuleContext {
		public NamedQueryContext namedQuery() {
			return GetRuleContext<NamedQueryContext>(0);
		}
		public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		public ChartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chart; } }
	}

	[RuleVersion(0)]
	public ChartContext chart() {
		ChartContext _localctx = new ChartContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_chart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155; Match(T__0);
			State = 156; namedQuery();
			State = 158;
			_la = _input.La(1);
			if (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (T__3 - 4)) | (1L << (T__14 - 4)) | (1L << (T__15 - 4)) | (1L << (T__25 - 4)) | (1L << (T__26 - 4)) | (1L << (RangeNull - 4)) | (1L << (RangeAllNotNull - 4)) | (1L << (RangeAYear - 4)) | (1L << (RangeAMonth - 4)) | (1L << (RangeDeltaMonth - 4)) | (1L << (RangeADay - 4)) | (1L << (RangeDeltaDay - 4)) | (1L << (RangeDeltaWeek - 4)))) != 0)) {
				{
				State = 157; range();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChartLevelsContext : ParserRuleContext {
		public ChartLevelContext chartLevel(int i) {
			return GetRuleContext<ChartLevelContext>(i);
		}
		public IReadOnlyList<ChartLevelContext> chartLevel() {
			return GetRuleContexts<ChartLevelContext>();
		}
		public ChartLevelsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chartLevels; } }
	}

	[RuleVersion(0)]
	public ChartLevelsContext chartLevels() {
		ChartLevelsContext _localctx = new ChartLevelsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_chartLevels);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160; chartLevel();
			State = 165;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__1) {
				{
				{
				State = 161; Match(T__1);
				State = 162; chartLevel();
				}
				}
				State = 167;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChartLevelContext : ParserRuleContext {
		public ITerminalNode Series() { return GetToken(ShellParser.Series, 0); }
		public ITerminalNode SingleQuotedString(int i) {
			return GetToken(ShellParser.SingleQuotedString, i);
		}
		public ITerminalNode Ignore() { return GetToken(ShellParser.Ignore, 0); }
		public IReadOnlyList<ITerminalNode> SingleQuotedString() { return GetTokens(ShellParser.SingleQuotedString); }
		public ITerminalNode ChartArea() { return GetToken(ShellParser.ChartArea, 0); }
		public ChartLevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chartLevel; } }
	}

	[RuleVersion(0)]
	public ChartLevelContext chartLevel() {
		ChartLevelContext _localctx = new ChartLevelContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_chartLevel);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ChartArea) | (1L << Series) | (1L << Ignore))) != 0)) ) {
			_errHandler.RecoverInline(this);
			}
			Consume();
			State = 178;
			_la = _input.La(1);
			if (_la==T__2) {
				{
				State = 169; Match(T__2);
				State = 175;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==SingleQuotedString) {
					{
					{
					State = 170; Match(SingleQuotedString);
					State = 171; Match(T__3);
					State = 172; Match(SingleQuotedString);
					}
					}
					State = 177;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReportContext : ParserRuleContext {
		public IToken Op;
		public NamedQueryContext namedQuery() {
			return GetRuleContext<NamedQueryContext>(0);
		}
		public GroupedQueryContext groupedQuery() {
			return GetRuleContext<GroupedQueryContext>(0);
		}
		public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		public ReportContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_report; } }
	}

	[RuleVersion(0)]
	public ReportContext report() {
		ReportContext _localctx = new ReportContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_report);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			_localctx.Op = _input.Lt(1);
			_la = _input.La(1);
			if ( !(_la==T__4 || _la==T__5) ) {
				_localctx.Op = _errHandler.RecoverInline(this);
			}
			Consume();
			State = 186;
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				State = 181; namedQuery();
				State = 183;
				_la = _input.La(1);
				if (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (T__3 - 4)) | (1L << (T__14 - 4)) | (1L << (T__15 - 4)) | (1L << (T__25 - 4)) | (1L << (T__26 - 4)) | (1L << (RangeNull - 4)) | (1L << (RangeAllNotNull - 4)) | (1L << (RangeAYear - 4)) | (1L << (RangeAMonth - 4)) | (1L << (RangeDeltaMonth - 4)) | (1L << (RangeADay - 4)) | (1L << (RangeDeltaDay - 4)) | (1L << (RangeDeltaWeek - 4)))) != 0)) {
					{
					State = 182; range();
					}
				}

				}
				break;

			case 2:
				{
				State = 185; groupedQuery();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamedQueryContext : ParserRuleContext {
		public NamedQContext namedQ() {
			return GetRuleContext<NamedQContext>(0);
		}
		public NamedQueryTemplateRContext namedQueryTemplateR() {
			return GetRuleContext<NamedQueryTemplateRContext>(0);
		}
		public NamedQueriesContext namedQueries() {
			return GetRuleContext<NamedQueriesContext>(0);
		}
		public NamedQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namedQuery; } }
	}

	[RuleVersion(0)]
	public NamedQueryContext namedQuery() {
		NamedQueryContext _localctx = new NamedQueryContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_namedQuery);
		try {
			State = 191;
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 188; namedQueries();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 189; namedQ();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 190; namedQueryTemplateR();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
